k8/staging/healthbot-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthbot-01
spec:
  template:
    spec:
      containers:
        - name: healthbot
