k8/staging/ingress-nginx-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tableland-ingress-nginx
spec:
  tls:
    - secretName: tableland-tls-cf-secret
      hosts:
        - staging.tableland.xyz
        - gateway.staging.tableland.xyz
  rules:
    - host: staging.tableland.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
    - host: gateway.staging.tableland.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
